Actualización provisional de la función Plot.Mapa().

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,12 @@ importFrom(magrittr,"%>%")
 importFrom(methods,missingArg)
 importFrom(png,readPNG)
 importFrom(scales,percent)
+importFrom(sf,st_as_sf)
+importFrom(sf,st_point_on_surface)
+importFrom(sp,coordinates)
+importFrom(stats,median)
+importFrom(stats,sd)
+importFrom(stats,var)
 importFrom(stringr,str_to_title)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
