--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,21 +2,34 @@
 
 export("%>%")
 export(Agregar)
+export(Plot.Apiladas)
 export(Plot.Barras)
+export(Plot.Boxplot)
+export(Plot.Drilldown)
 export(Plot.Mapa)
+export(Plot.Radar)
 export(Plot.Series)
 export(Plot.Torta)
+export(Plot.Treemap)
 export(StaticPlot)
 export(Tabla)
+export(Tabla.General)
 export(Tabla.SaberPro)
+export(read_example)
 import(DT)
+import(d3r)
+import(d3treeR)
 import(dplyr)
 import(dygraphs)
+import(echarts4r)
 import(highcharter)
 import(leaflet)
 import(plotly)
+import(sunburstR)
 import(tidyr)
+import(treemap)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(forcats,fct_drop)
 importFrom(forcats,fct_explicit_na)
 importFrom(forcats,fct_unique)
 importFrom(grDevices,colorRampPalette)
@@ -33,6 +46,7 @@ importFrom(magrittr,"%>%")
 importFrom(methods,missingArg)
 importFrom(png,readPNG)
 importFrom(rlang,":=")
+importFrom(rlang,quo_name)
 importFrom(scales,percent)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_point_on_surface)
@@ -44,6 +58,7 @@ importFrom(stringr,str_to_title)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,replace_na)
+importFrom(utils,head)
 importFrom(utils,menu)
 importFrom(webshot,webshot)
 importFrom(xts,xts)
