--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Type: Package
 Package: UnalR
 Title: Una implementación de funciones de uso interno
-Version: 0.1.0
+Version: 1.0.0
 Date: 2021-11-28
 Authors@R: c(
   person("Jeison", "Alarcón", email = "jmalarconbe@unal.edu.co", role = c("aut", "cre", "ctr"), comment = c(ORCID = "0000-0002-1517-7840")),
@@ -18,24 +18,28 @@ Description: Una herramienta rápida y consistente para la disposición de micro
 License: GPL (>= 3) + file LICENSE
 URL: https://unal.edu.co, http://estadisticas.unal.edu.co/home/
 BugReports: https://github.com/estadisticaun
-Imports: 
-    DT (>= 0.20),
-    highcharter (>= 0.8.2),
-    plotly (>= 4.10.0),
+Imports:
+    DT (>= 0.27),
+    highcharter (>= 0.9.4),
+    plotly (>= 4.10.1),
     dygraphs (>= 1.1.1.6),
-    leaflet (>= 2.0.4.1),
+    leaflet (>= 2.1.1),
     leaflet.extras (>= 1.0.0),
-    echarts4r (>= 0.4.2),
+    echarts4r (>= 0.4.4),
+    ggplot2 (>= 3.4.0),
     treemap (>= 2.4.3),
     d3r (>= 1.0.0),
     d3treeR (>= 0.1),
     sunburstR (>= 2.1.6),
-    dplyr (>= 1.0.7),
-    tidyr (>= 1.1.4),
-    forcats (>= 0.5.1),
-    rlang (>= 0.4.12),
+    dplyr (>= 1.0.10),
+    tidyr (>= 1.3.0),
+    forcats (>= 1.0.0),
+    rlang (>= 1.0.6),
     magrittr,
     scales,
+    ggtech,
+    ggthemes,
+    hrbrthemes,
     xts,
     zoo,
     sf,
@@ -50,17 +54,20 @@ Imports:
     RColorBrewer,
     utils,
     methods
-Suggests: 
+Suggests:
     readxl,
     pals,
     viridis
-Depends: 
-    R (>= 4.1.0)
+Depends:
+    R (>= 4.2.0)
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
-Remotes: 
+RoxygenNote: 7.2.3
+Remotes:
     rstudio/DT,
     JohnCoene/echarts4r,
-    timelyportfolio/d3treeR
+    timelyportfolio/d3treeR,
+    ricardo-bion/ggtech,
+    jrnold/ggthemes,
+    hrbrmstr/hrbrthemes
