--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,11 @@ import(d3treeR)
 import(dplyr)
 import(dygraphs)
 import(echarts4r)
+import(ggplot2, except = last_plot)
+import(ggtech)
+import(ggthemes)
 import(highcharter)
+import(hrbrthemes)
 import(leaflet)
 import(plotly)
 import(sunburstR)
@@ -43,10 +47,12 @@ importFrom(leaflet.extras,addFullscreenControl)
 importFrom(leaflet.extras,addSearchFeatures)
 importFrom(leaflet.extras,searchFeaturesOptions)
 importFrom(magrittr,"%>%")
+importFrom(methods,is)
 importFrom(methods,missingArg)
 importFrom(png,readPNG)
 importFrom(rlang,":=")
 importFrom(rlang,quo_name)
+importFrom(scales,label_percent)
 importFrom(scales,percent)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_point_on_surface)
