--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ import(d3treeR)
 import(dplyr)
 import(dygraphs)
 import(echarts4r)
+import(fmsb)
 import(ggplot2, except = last_plot)
 import(ggtech)
 import(ggthemes)
@@ -38,6 +39,8 @@ importFrom(forcats,fct_explicit_na)
 importFrom(forcats,fct_unique)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,rainbow)
+importFrom(graphics,legend)
+importFrom(graphics,par)
 importFrom(grid,grid.raster)
 importFrom(htmltools,HTML)
 importFrom(htmltools,tag)
@@ -52,6 +55,7 @@ importFrom(methods,missingArg)
 importFrom(png,readPNG)
 importFrom(rlang,":=")
 importFrom(rlang,quo_name)
+importFrom(scales,alpha)
 importFrom(scales,label_percent)
 importFrom(scales,percent)
 importFrom(sf,st_as_sf)
