Adición de requerimientos, no Issues, de Plot.Mapa para el caso estático.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -8,7 +8,7 @@ authors:
   Jeison Alarcón:
     href: https://github.com/JeisonAlarcon
   Alberto Rodríguez:
-    href: https://github.com/alberto1976
+    href: https://albertor.netlify.app
   UnalR:
     href: https://github.com/estadisticaun/UnalR
     html: <img src='https://github.com/estadisticaun/UnalR/blob/master/man/figures/Logo.png' alt='Logo' width='72' />
