Adición de la función Plot.Histograma(), homologación de nombres de argumentos, ajustes menores y corrección de Bugs.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(Plot.Apiladas)
 export(Plot.Barras)
 export(Plot.Boxplot)
 export(Plot.Drilldown)
+export(Plot.Histograma)
 export(Plot.Mapa)
 export(Plot.Mundo)
 export(Plot.Radar)
