--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(ggspatial,annotation_scale)
 importFrom(ggspatial,north_arrow_fancy_orienteering)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,rainbow)
+importFrom(graphics,hist)
 importFrom(graphics,legend)
 importFrom(graphics,par)
 importFrom(grid,grid.raster)
@@ -60,9 +61,9 @@ importFrom(leaflet.extras,searchFeaturesOptions)
 importFrom(lifecycle,deprecate_warn)
 importFrom(magrittr,"%>%")
 importFrom(maps,map)
-importFrom(maptools,map2SpatialPolygons)
 importFrom(methods,is)
 importFrom(methods,missingArg)
+importFrom(methods,slot)
 importFrom(png,readPNG)
 importFrom(rlang,":=")
 importFrom(rlang,quo_name)
@@ -73,9 +74,13 @@ importFrom(sf,st_as_sf)
 importFrom(sf,st_centroid)
 importFrom(sf,st_point_on_surface)
 importFrom(sp,CRS)
+importFrom(sp,Polygon)
+importFrom(sp,Polygons)
 importFrom(sp,SpatialPolygonsDataFrame)
+importFrom(sp,as.SpatialPolygons.PolygonsList)
 importFrom(sp,coordinates)
 importFrom(stats,median)
+importFrom(stats,na.omit)
 importFrom(stats,sd)
 importFrom(stats,var)
 importFrom(stringr,str_length)
@@ -85,6 +90,7 @@ importFrom(tidyr,pivot_wider)
 importFrom(tidyr,replace_na)
 importFrom(utils,head)
 importFrom(utils,menu)
+importFrom(utils,tail)
 importFrom(webshot,webshot)
 importFrom(xts,xts)
 importFrom(zoo,as.Date)
