--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ importFrom(RColorBrewer,brewer.pal)
 importFrom(forcats,fct_drop)
 importFrom(forcats,fct_na_value_to_level)
 importFrom(forcats,fct_unique)
+importFrom(ggrepel,geom_text_repel)
 importFrom(ggspatial,annotation_north_arrow)
 importFrom(ggspatial,annotation_scale)
 importFrom(ggspatial,north_arrow_fancy_orienteering)
