Corrección caso categoría única en Barras y Torta.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ importFrom(sp,as.SpatialPolygons.PolygonsList)
 importFrom(sp,coordinates)
 importFrom(stats,median)
 importFrom(stats,na.omit)
+importFrom(stats,reorder)
 importFrom(stats,sd)
 importFrom(stats,var)
 importFrom(stringr,str_length)
