Últimos ajustes de la version final previa a publicación del paquete.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,8 +38,10 @@ import(sunburstR)
 import(tidyr)
 import(treemap)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(forcats,as_factor)
 importFrom(forcats,fct_drop)
 importFrom(forcats,fct_na_value_to_level)
+importFrom(forcats,fct_relevel)
 importFrom(forcats,fct_unique)
 importFrom(ggrepel,geom_text_repel)
 importFrom(ggspatial,annotation_north_arrow)
