--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,14 @@ import(sunburstR)
 import(tidyr)
 import(treemap)
 importFrom(RColorBrewer,brewer.pal)
+importFrom(cli,bg_yellow)
+importFrom(cli,cli_alert)
+importFrom(cli,cli_alert_info)
+importFrom(cli,cli_alert_success)
+importFrom(cli,cli_h1)
+importFrom(cli,cli_text)
+importFrom(cli,col_black)
+importFrom(cli,symbol)
 importFrom(forcats,as_factor)
 importFrom(forcats,fct_drop)
 importFrom(forcats,fct_na_value_to_level)
