--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,7 +34,6 @@ import(plotly)
 import(sunburstR)
 import(tidyr)
 import(treemap)
-importFrom(RColorBrewer,brewer.pal)
 importFrom(cli,bg_yellow)
 importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_info)
@@ -52,8 +51,8 @@ importFrom(ggrepel,geom_text_repel)
 importFrom(ggspatial,annotation_north_arrow)
 importFrom(ggspatial,annotation_scale)
 importFrom(ggspatial,north_arrow_fancy_orienteering)
-importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,rainbow)
+importFrom(grDevices,topo.colors)
 importFrom(graphics,hist)
 importFrom(graphics,legend)
 importFrom(graphics,par)
