--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,57 +19,56 @@ License: GPL (>= 3) + file LICENSE
 URL: https://unal.edu.co, http://estadisticas.unal.edu.co/home/, https://github.com/estadisticaun/UnalR
 BugReports: https://github.com/estadisticaun/UnalR/issues
 Imports:
-    DT (>= 0.28.1),
-    highcharter (>= 0.9.4),
-    plotly (>= 4.10.2),
-    dygraphs (>= 1.1.1.6),
-    leaflet (>= 2.1.2),
-    leaflet.extras (>= 1.0.0),
-    echarts4r (>= 0.4.5),
-    ggplot2 (>= 3.4.3),
-    treemap (>= 2.4.4),
-    d3r (>= 1.0.1),
+    d3r (>= 1.1.0),
     d3treeR (>= 0.1),
-    sunburstR (>= 2.1.8),
-    fmsb (>= 0.7.5),
-    gt (>= 0.9.0),
-    gtExtras (>= 0.4.6.9001),
-    dplyr (>= 1.1.2),
-    tidyr (>= 1.3.0),
+    dplyr (>= 1.1.4),
+    DT (>= 0.33),
+    dygraphs (>= 1.1.1.6),
+    echarts4r (>= 0.4.5),
+    fmsb (>= 0.7.6),
     forcats (>= 1.0.0),
-    rlang (>= 1.1.1),
-    magrittr,
-    scales,
+    ggplot2 (>= 3.5.1),
+    gt (>= 0.10.1),
+    highcharter (>= 0.9.4),
+    leaflet (>= 2.2.2),
+    leaflet.extras (>= 1.0.0),
+    plotly (>= 4.10.4),
+    rlang (>= 1.1.3),
+    sunburstR (>= 2.1.8),
+    tidyr (>= 1.3.1),
+    treemap (>= 2.4.4),
+    cli,
+    ggspatial,
     ggrepel,
-    xts,
-    zoo,
+    gtExtras,
+    htmltools,
+    lifecycle,
+    magrittr,
+    maps,
+    scales,
     sf,
     sp,
-    maps,
-    ggspatial,
     stringr,
-    htmltools,
+    xts,
+    zoo,
+    grDevices,
+    utils,
+    methods,
     htmlwidgets,
     webshot,
     png,
-    grid,
-    grDevices,
-    RColorBrewer,
-    utils,
-    methods,
-    lifecycle,
-    cli
+    grid
 Suggests:
-    testthat (>= 3.0.0),
-    readxl,
-    tibble,
-    pals,
-    viridis,
-    magick,
-    rsvg,
+    testthat (>= 3.2.1.1),
     cowplot,
     ggthemes,
-    ggtech
+    ggtech,
+    magick,
+    pals,
+    readxl,
+    rsvg,
+    tibble,
+    viridis
 Depends:
     R (>= 4.3.0)
 Encoding: UTF-8
