--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,6 @@ export(Tabla.SaberPro)
 export(read_example)
 import(DT)
 import(d3r)
-import(d3treeR)
 import(dplyr)
 import(dygraphs)
 import(echarts4r)
@@ -34,6 +33,8 @@ import(plotly)
 import(sunburstR)
 import(tidyr)
 import(treemap)
+importFrom(XML,saveXML)
+importFrom(XML,xpathSApply)
 importFrom(cli,bg_yellow)
 importFrom(cli,cli_alert)
 importFrom(cli,cli_alert_info)
@@ -42,6 +43,7 @@ importFrom(cli,cli_h1)
 importFrom(cli,cli_text)
 importFrom(cli,col_black)
 importFrom(cli,symbol)
+importFrom(data.tree,as.Node)
 importFrom(forcats,as_factor)
 importFrom(forcats,fct_drop)
 importFrom(forcats,fct_na_value_to_level)
@@ -57,10 +59,13 @@ importFrom(graphics,hist)
 importFrom(graphics,legend)
 importFrom(graphics,par)
 importFrom(grid,grid.raster)
+importFrom(gridSVG,grid.export)
 importFrom(htmltools,HTML)
 importFrom(htmltools,tag)
 importFrom(htmltools,withTags)
 importFrom(htmlwidgets,saveWidget)
+importFrom(jsonlite,fromJSON)
+importFrom(jsonlite,toJSON)
 importFrom(leaflet.extras,addFullscreenControl)
 importFrom(leaflet.extras,addSearchFeatures)
 importFrom(leaflet.extras,searchFeaturesOptions)
