[skip ci] Fix and resubmit.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,7 @@ Description: Una herramienta rápida y consistente para la disposición de micro
     tipos de gráficos con una sintaxis altamente configurable y simple. Entre estos
     encontramos la visualización de tablas HTML, series, gráficos de barras y
     circulares, mapas, etc. Todo lo anterior apoyado en bibliotecas de JavaScript.
-License: GPL (>= 3) + file LICENSE
+License: GPL (>= 3)
 URL: https://unal.edu.co, https://estadisticas.unal.edu.co/home/, https://github.com/estadisticaun/UnalR
 BugReports: https://github.com/estadisticaun/UnalR/issues
 Imports:
