--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,73 +3,81 @@ Package: UnalR
 Title: Una implementación de funciones de uso interno
 Version: 1.0.0
 Authors@R: c(
-  person("Jeison", "Alarcón", email = "jmalarconbe@unal.edu.co", role = c("aut", "cre", "ctr"), comment = c(ORCID = "0000-0002-1517-7840")),
-  person("Alberto", "Rodríguez", email = "albrodriguezr@unal.edu.co", role = c("aut", "rev")),
-  person("Dirección Nacional de Planeación y Estadística", "Universidad Nacional de Colombia", email = "estadistica_nal@unal.edu.co", role = c("cph", "fnd"))
+    person("Jeison", "Alarcón", , "jmalarconbe@unal.edu.co", role = c("aut", "cre", "ctr"),
+           comment = c(ORCID = "0000-0002-1517-7840")),
+    person("Alberto", "Rodríguez", , "albrodriguezr@unal.edu.co", role = c("aut", "rev")),
+    person("Dirección Nacional de Planeación y Estadística", "Universidad Nacional de Colombia", , "estadistica_nal@unal.edu.co", role = c("cph", "fnd"))
   )
-Description: Una herramienta rápida y consistente para la disposición de microdatos
-    y la visualización de las cifras y estadísticas oficiales de la Universidad
-    Nacional de Colombia <https://unal.edu.co>. Contiene una biblioteca de
-    funciones gráficas, tanto estáticas como interactivas, que ofrece numerosos
-    tipos de gráficos con una sintaxis altamente configurable y simple. Entre estos
-    encontramos la visualización de tablas HTML, series, gráficos de barras y
-    circulares, mapas, etc. Todo lo anterior apoyado en bibliotecas de JavaScript.
-    English: A fast and consistent tool for the arrangement of microdata and the
-    visualization of official figures and statistics from the National University
-    of Colombia <https://unal.edu.co>. It includes a library of graphical functions,
-    both static and interactive, offering numerous types of charts with a highly
-    configurable and simple syntax. Among these, we find the visualization of HTML
-    tables, series, bar and pie charts, maps, etc. It provides the capability to
-    transition from the interactive to the dynamic world and from one library to
-    another without changing function or syntax.
+Description: Una herramienta rápida y consistente para la disposición de
+    microdatos y la visualización de las cifras y estadísticas oficiales
+    de la Universidad Nacional de Colombia <https://unal.edu.co>. Contiene
+    una biblioteca de funciones gráficas, tanto estáticas como
+    interactivas, que ofrece numerosos tipos de gráficos con una sintaxis
+    altamente configurable y simple. Entre estos encontramos la
+    visualización de tablas HTML, series, gráficos de barras y circulares,
+    mapas, etc. Todo lo anterior apoyado en bibliotecas de JavaScript.
+    English: A fast and consistent tool for the arrangement of microdata
+    and the visualization of official figures and statistics from the
+    National University of Colombia <https://unal.edu.co>. It includes a
+    library of graphical functions, both static and interactive, offering
+    numerous types of charts with a highly configurable and simple syntax.
+    Among these, we find the visualization of HTML tables, series, bar and
+    pie charts, maps, etc. It provides the capability to transition from
+    the interactive to the dynamic world and from one library to another
+    without changing function or syntax.
 License: GPL (>= 3)
-URL: https://unal.edu.co, https://estadisticas.unal.edu.co/home/, https://github.com/estadisticaun/UnalR
+URL: https://unal.edu.co, https://estadisticas.unal.edu.co/home/,
+    https://github.com/estadisticaun/UnalR
 BugReports: https://github.com/estadisticaun/UnalR/issues
+Depends:
+    R (>= 4.3.0)
 Imports:
+    cli,
     d3r (>= 1.1.0),
+    data.tree,
     dplyr (>= 1.1.4),
-    DT (>= 0.33),
+    DT (>= 0.34.0),
     dygraphs (>= 1.1.1.6),
-    echarts4r (>= 0.4.5),
+    echarts4r (>= 0.4.6),
     fmsb (>= 0.7.6),
     forcats (>= 1.0.0),
-    ggplot2 (>= 3.5.1),
-    gt (>= 0.10.1),
-    highcharter (>= 0.9.4),
-    leaflet (>= 2.2.2),
-    leaflet.extras (>= 1.0.0),
-    plotly (>= 4.10.4),
-    rlang (>= 1.1.3),
-    sunburstR (>= 2.1.8),
-    tidyr (>= 1.3.1),
-    treemap (>= 2.4.4),
-    cli,
-    data.tree,
-    ggspatial,
+    ggplot2 (>= 4.0.0),
     ggrepel,
+    ggspatial,
+    graphics,
+    grDevices,
+    grid,
+    gridSVG,
+    gt (>= 1.0.0),
     gtExtras,
+    highcharter (>= 0.9.4),
     htmltools,
+    htmlwidgets,
     jsonlite,
+    leaflet (>= 2.2.3),
+    leaflet.extras (>= 1.0.0),
     lifecycle,
     magrittr,
     maps,
+    methods,
+    plotly (>= 4.11.0),
+    png,
+    rlang (>= 1.1.6),
     scales,
     sf,
     sp,
+    stats,
     stringr,
-    xts,
-    zoo,
-    grDevices,
+    sunburstR (>= 2.1.8),
+    tidyr (>= 1.3.1),
+    treemap (>= 2.4.4),
     utils,
-    methods,
-    htmlwidgets,
     webshot,
-    png,
-    grid,
-    gridSVG,
-    XML
+    XML,
+    xts,
+    zoo
 Suggests:
-    testthat (>= 3.2.1.1),
+    testthat (>= 3.2.3),
     cowplot,
     ggthemes,
     magick,
@@ -78,12 +86,11 @@ Suggests:
     rsvg,
     tibble,
     viridis
-Depends:
-    R (>= 4.3.0)
+Config/testthat/edition: 3
+Config/testthat/parallel: true
 Encoding: UTF-8
-Language: es-ES
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.1
+RoxygenNote: 7.3.3
 Config/testthat/edition: 3
 Config/testthat/parallel: true
